--- a/resource_library/src/main/AndroidManifest.xml
+++ b/resource_library/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nerolink.resource_library" />
+    package="com.nerolink.resource_library">
+
+    <application>
+        <activity android:name=".WelcomeActivity"></activity>
+    </application>
+
+</manifest>
