--- a/teacherclient/src/main/AndroidManifest.xml
+++ b/teacherclient/src/main/AndroidManifest.xml
@@ -5,14 +5,15 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/teacher_client_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.nerolink.resource_library.WelcomeActivity">
+            <meta-data android:name="AppName" android:value="@string/teacher_client_name" />
+            <meta-data android:name="Logo" android:resource="@drawable/logo_teacher"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
