--- a/analysis/build.gradle
+++ b/analysis/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin:'kotlin-android'
 android {
     compileSdkVersion 28
 
@@ -32,5 +32,4 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':resource_library')
-    implementation project(':tools')
 }
