--- a/resource_library/build.gradle
+++ b/resource_library/build.gradle
@@ -39,6 +39,19 @@ dependencies {
     implementation project(':tools')
     kapt "com.android.databinding:compiler:3.1.4"
 
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    //导入retrofit
+    implementation 'com.google.code.gson:gson:2.6.2'
+    //Gson 库
+    //下面两个是RxJava 和 RxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.x.y'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //转换器，请求结果转换成Model
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    //配合Rxjava 使用
+
 }
 
 apply plugin: 'kotlin-android'
