--- a/resource_library/build.gradle
+++ b/resource_library/build.gradle
@@ -52,6 +52,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     //配合Rxjava 使用
 
+    // https://mvnrepository.com/artifact/org.eclipse.paho/mqtt-client
+    implementation group: 'org.eclipse.paho', name: 'mqtt-client', version: '0.4.0'
+
+
+    // https://mvnrepository.com/artifact/org.greenrobot/eventbus
+    implementation group: 'org.greenrobot', name: 'eventbus', version: '3.0.0'
+
+
 }
 
 apply plugin: 'kotlin-android'
