--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -48,6 +48,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     //配合Rxjava 使用
 
+    // https://mvnrepository.com/artifact/org.eclipse.paho/mqtt-client
+    implementation group: 'org.eclipse.paho', name: 'mqtt-client', version: '0.4.0'
+
+
 }
 repositories {
     mavenCentral()
